# bstt

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE.txt  README.md  pyproject.toml
config/: buddhist_terms.json  fillers.txt  settings.toml
docs/superpowers/plans/: 2026-06-16-gui.md
docs/superpowers/specs/: 2026-06-16-gui-design.md
stt/: __main__.py  config.py  log.py  pipeline.py  postprocess.py  procrun.py  punctuate.py  queue.py  transcribe.py  writer.py
stt/gui/: app.py  config_tab.py  jobs_tab.py  main_window.py  run_tab.py  transcripts_tab.py  worker.py
tests/: test_cli.py  test_integration.py  test_pipeline.py  test_postprocess.py  test_queue.py  test_reprocess.py  test_transcribe.py  test_writer.py
