[project]
name = "stt"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper",
    "opencc-python-reimplemented",
]

[project.optional-dependencies]
punctuation = ["funasr>=1.3.9", "torch"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]

# Install punctuation support: uv add funasr
