[project]
name = "stt"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper",
    "funasr>=1.3.9",
    "opencc-python-reimplemented",
    "torch>=2.12.0",
]

[project.optional-dependencies]
punctuation = ["funasr>=1.3.9", "torch>=2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu132"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]

# Install punctuation support: uv add funasr
