[project]
name = "stt"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper",
    "funasr>=1.3.9",
    "opencc-python-reimplemented",
    "pyside6>=6.11.1",
    "torch>=2.12.0",
    # macOS GPU inference: CTranslate2 (faster-whisper) has no Metal/MPS
    # backend, so Apple Silicon uses MLX instead. faster-whisper stays as the
    # CPU fallback everywhere.
    "mlx-whisper; sys_platform == 'darwin'",
]

[project.optional-dependencies]
punctuation = ["funasr>=1.3.9", "torch>=2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# PyTorch's CUDA wheels are Linux/Windows only; pulling them unconditionally
# breaks resolution on macOS (no CUDA arm64 wheels). Mark the index explicit
# and route torch through it only off-darwin, so macOS gets the MPS-enabled
# wheels from PyPI.
[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu132", marker = "sys_platform != 'darwin'" },
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]

# Install punctuation support: uv add funasr
